--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
-    "mongodb": "^6.13.1",
+    "mongodb": "^6.14.0",
+    "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9"
   }
 }
