--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb+srv://toriando1234:Ankit&1234@toriando1.ys6dz.mongodb.net
+MONGO_URI=mongodb://localhost:27017/feedback_user
 EMAIL=ankitjangid9197@gmail.com
 EMAIL_PASSWORD=rhpu uvkv tugb ejlc
+JWT_SECRET=hopeitz1208**company
