--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-validator": "^7.2.1",
     "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.14.0",
+    "mongoose": "^8.12.1",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9"
   }
