Update MongoDB connection settings and change database name to user_feedback

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/feedback_user
+MONGO_URI=mongodb://localhost:27017/user_feedback
 EMAIL=ankitjangid9197@gmail.com
 EMAIL_PASSWORD=rhpu uvkv tugb ejlc
 JWT_SECRET=hopeitz1208**company
